[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blockdodge"
version = "0.1.0"
description = "A pure Python port of the BlockDodge WinForms game."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame==2.6.1",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.10",
]

[project.scripts]
blockdodge = "blockdodge.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
blockdodge = [
    "resources/*",
    "config/*",
]
